# Ballistic

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  error_log.txt  imgui.ini
Ballistic/: Ballistic.h  CMakeLists.txt  bepch.h
Ballistic/Core/: IApplication.cpp  IApplication.h  Root.cpp  Root.h  app.h
Ballistic/Core/Layers/: ILayer.h  Layerstack.cpp
Ballistic/Core/Window/: Window.cpp  Window.h  WindowInfo.h
Ballistic/Entry/: Entrypoint.cpp  Entrypoint.h
Ballistic/Renderer/: Renderer.cpp  Renderer.h
Ballistic/Renderer/RenderDevice/: GLRenderDevice.cpp  GLRenderDevice.h  IRenderDevice.h
Ballistic/Root/: Root.cpp
Ballistic/Root/MeshManager/: MeshManager.cpp  MeshManager.h
Ballistic/Root/ProjectManager/: ProjectManager.cpp  ProjectManager.h
Ballistic/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Ballistic/include/: Ballistic.h  bepch.h
Ballistic/include/Core/: Application.h
Ballistic/include/Core/Layers/: RenderLayer.h
Ballistic/include/Platform/OpenGL/: Buffer.h  Texture2D.h  VertexArray.h
Ballistic/include/Platform/Window/: GLFWWindow.h
Ballistic/include/Renderer/: IRenderer.h
Ballistic/src/: Ballistic.h  BallisticEntrypoint.h  bepch.h  lrpch.h
Ballistic/src/Core/: Application.cpp  Application.h  Config.cpp  Config.h  IWindow.cpp  IWindow.h  PlatformAPI.h  WindowAPI.h  WindowProps.h  application.cpp  application.h
Ballistic/src/Core/Layers/: Event.h  Layer.h  LayerStack.cpp  LayerStack.h  RenderLayer.cpp  RenderLayer.h
Ballistic/src/Core/Window/: IWindow.cpp  ImGuiSystem.cpp
Ballistic/src/Core/Windows/: IWindow.cpp
Ballistic/src/Platform/API/OpenGL/: Buffer.cpp  Framebuffer.cpp  Renderbuffer.cpp  Shader.cpp  State.cpp  Texture2D.cpp  VertexArray.cpp
Ballistic/src/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Ballistic/src/Platform/OpenGL/: Framebuffer.h  Renderbuffer.h  Shader.h
Ballistic/src/Platform/Vulkan/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffers.cpp  VulkanFramebuffers.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h
Ballistic/src/Platform/Window/: GLFWWindow.cpp
Ballistic/src/Platform/Windows/: GLFWWindow.cpp  GLFWWindow.h
Ballistic/src/Project/: ProjectManager.cpp  ProjectManager.h
Ballistic/src/Project/Assets/: AssetPool.cpp  AssetPool.h
Ballistic/src/Project/Scene/: Components.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Ballistic/src/Renderer/: GLRenderer.cpp  GLRenderer.h  IRenderer.cpp  IRenderer.h  OglRenderer.cpp  OglRenderer.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  VkRenderer.cpp  VkRenderer.h
Ballistic/src/Renderer/Backends/OpenGL/: GLRenderDevice.cpp
engine/: CMakeLists.txt
engine/res/: CMakeLists.txt  GenerateShadersHeader.cmake  resources.h  resources.rc  shaders.h
engine/res/shaders/: blit.frag  fullscreen.vert
engine/src/: pch.h
engine/src/Graphics/: Renderer.cpp
engine/src/Graphics/VK/Pipeline/: ComputePipeline.h  Shader.cpp
engine/src/core/: Window.h  application.cpp  application.h  assert.h  log.cpp  log.h  timestamp.cpp  timestamp.h  window.cpp  window.h
engine/src/graphics/: imgui_layer.cpp  imgui_layer.h  renderer.cpp  renderer.h  splash_renderer.cpp  splash_renderer.h
engine/src/graphics/passes/: blit_pass.cpp  blit_pass.h  blit_to_swapchain_pass.cpp  blit_to_swapchain_pass.h  editor_imgui_pass.cpp  editor_imgui_pass.h  hbao_blur_pass.cpp  hbao_blur_pass.h  hbao_pass.cpp  hbao_pass.h  imgui_pass.cpp  imgui_pass.h  light_pass.cpp  light_pass.h  main_gbuffer_pass.cpp  main_gbuffer_pass.h  main_z_pass.cpp  main_z_pass.h  placeholder_pass.cpp  placeholder_pass.h  scene_passes.h  scene_placeholder_pass.cpp  scene_placeholder_pass.h  splash_pass.cpp  splash_pass.h
engine/src/graphics/render_graph/: global_descriptor_heap.cpp  global_descriptor_heap.h  pass.h  render_graph.cpp  render_graph.h  render_path.h  transient_heap.cpp  transient_heap.h  transient_resource.h
engine/src/graphics/render_paths/: editor_render_path.cpp  editor_render_path.h  game_render_path.cpp  game_render_path.h  splash_render_path.cpp  splash_render_path.h
engine/src/graphics/vk/: vk.h
engine/src/graphics/vk/allocator/: allocator.cpp  allocator_pool.cpp
engine/src/graphics/vk/buffer/: buffer.cpp
engine/src/graphics/vk/core/: debug_messenger.cpp  device.cpp  instance.cpp  physical_device.cpp  queue.cpp  surface.cpp  swapchain.cpp
engine/src/graphics/vk/descriptor/: descriptor_pool.cpp  descriptor_set.cpp  descriptor_set_layout.cpp
engine/src/graphics/vk/heap/: bindless_heap.cpp  transient_heap.cpp  transient_heap.h  transient_resource.cpp
engine/src/graphics/vk/image/: image_2d.cpp  image_2d.h  image_view.cpp  sampler.cpp  sampler.h
engine/src/graphics/vk/pass/: framebuffer.cpp  (+3 more)
engine/src/impl/: windows.cpp
engine/src/platform/: file_dialog.cpp  file_dialog.h  process.cpp  process.h
engine/src/project/: project.cpp  project.h  project_loader.cpp  project_loader.h  serialization.cpp  serialization.h
engine/src/scene/: scene.cpp  scene_manager.cpp
engine/src/window/: window.cpp
game/: CMakeLists.txt  game_application.cpp  game_application.h
game/src/: game_application.cpp  game_application.h  main.cpp
game/src/game/: game_application.cpp  game_application.h
(+185 files in other folders)
